--- a/devfile.yaml
+++ b/devfile.yaml
@@ -25,7 +25,7 @@ components:
       cpuLimit: 500m
       env:
         - name: ADMINER_DEFAULT_SERVER
-          value: db
+          value: localhost
         - name: ADMINER_DESIGN
           value: nette
       endpoints:
@@ -57,6 +57,15 @@ components:
       size: 1G
 
 commands:
+  - id: setup
+    exec:
+      label: "Setup project"
+      component: tools
+      workingDir: ${PROJECT_SOURCE}
+      commandLine: "./setup.sh"
+      group:
+        kind: build
+
   - id: install-dependencies
     exec:
       label: "Install dependencies"
@@ -98,6 +107,6 @@ commands:
       label: "Run the server in debug mode"
       component: tools
       workingDir: ${PROJECT_SOURCE}
-      commandLine: ". .venv/bin/activate &&  export DEBUG_MODE=True && python3 manage.py runserver 0.0.0.0:8000 --noreload --nothreading"
+      commandLine: ". .venv/bin/activate && export DEBUG_MODE=True && python3 manage.py runserver 0.0.0.0:8000 --noreload --nothreading"
       group:
         kind: debug
